--- a/open311/css/leaderboard.css
+++ b/open311/css/leaderboard.css
@@ -3,7 +3,7 @@ body {
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
-  width: 500px;
+  /*width: 500px; */
   background-color: #f8f8f8;
   font-size: 24px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
